--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "resend": "^6.2.2",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
